Add note styling

--- a/index.html
+++ b/index.html
@@ -20,13 +20,47 @@
     <div class="form-container">
         <h1>Killy's Note Taker</h1>
         <h3>Add a New note</h3>
-        <p class="message alert-message">Hi, I'm a message</p>
         <form>
-           <label for="title">Title</label> 
-           <input type="text" id="title" placeholder="Enter a note title">
-           <label for="note">Note</label>
-           <textarea name="note" id="note" cols="30" rows="10" placeholder="Enter your note here"></textarea>
+           <label for="title">Title
+            <input type="text" id="title" placeholder="Enter a note title">
+           </label> 
+           <label for="note">Note
+            <textarea name="note" id="note" cols="30" rows="10" placeholder="Enter your note here"></textarea>
+           </label>
+           <button type="submit">Submit</button>
         </form>
+    </div>
+    <div class="note-container">
+        <!-- Note One -->
+        <div class="note">
+            <h2 class="note-title">Sample Note Title</h2>
+            <p class="note-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quas laudantium, enim omnis excepturi vero vel unde perspiciatis voluptatum voluptatibus pariatur similique quia nihil inventore hic maxime asperiores commodi repudiandae?
+            Ex, ducimus maxime! Quidem quisquam voluptates sapiente mollitia ipsa voluptas vitae velit nobis quod! Qui eaque, ullam eos facere deserunt quia quisquam dicta. Corporis nobis illo excepturi impedit debitis libero.</p>
+            <div class="note-btns">
+                <button type="button" class="note-btn view-note">View Detail</button>
+                <button type="button" class="note-btn delete-note">View Note</button>
+            </div>
+        </div>
+        <!-- Note two -->
+        <div class="note">
+            <h2 class="note-title">Sample Note Title</h2>
+            <p class="note-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quas laudantium, enim omnis excepturi vero vel unde perspiciatis voluptatum voluptatibus pariatur similique quia nihil inventore hic maxime asperiores commodi repudiandae?
+            Ex, ducimus maxime! Quidem quisquam voluptates sapiente mollitia ipsa voluptas vitae velit nobis quod! Qui eaque, ullam eos facere deserunt quia quisquam dicta. Corporis nobis illo excepturi impedit debitis libero.</p>
+            <div class="note-btns">
+                <button type="button" class="note-btn view-note">View Detail</button>
+                <button type="button" class="note-btn delete-note">View Note</button>
+            </div>
+        </div>
+        <!-- Note Three -->
+        <div class="note">
+            <h2 class="note-title">Sample Note Title</h2>
+            <p class="note-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quas laudantium, enim omnis excepturi vero vel unde perspiciatis voluptatum voluptatibus pariatur similique quia nihil inventore hic maxime asperiores commodi repudiandae?
+            Ex, ducimus maxime! Quidem quisquam voluptates sapiente mollitia ipsa voluptas vitae velit nobis quod! Qui eaque, ullam eos facere deserunt quia quisquam dicta. Corporis nobis illo excepturi impedit debitis libero.</p>
+            <div class="note-btns">
+                <button type="button" class="note-btn view-note">View Detail</button>
+                <button type="button" class="note-btn delete-note">View Note</button>
+            </div>
+        </div>
     </div>
     <div class="note-container"></div>
 </body>
