Add view note button functionality in js

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <button class="modal-btn"><i class="fa-solid fa-xmark"></i></button>
         <h2 class="modal-title">Title here</h2>
         <p class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere adipisci voluptas voluptates nisi iure fugiat eveniet repellendus quia tenetur fugit aperiam nostrum dicta neque vel rem nihil dignissimos, minus, enim necessitatibus!</p>
-        </div>
-        
+        </div>  
     </div>
     <div class="form-container">
         <h1>Killy's Note Taker</h1>
@@ -37,50 +36,9 @@
         </form>
     </div>
     <div class="note-container">
-        <!-- Note One -->
-        <div class="note">
-            <h2 class="note-title">Sample Note Title</h2>
-            <p class="note-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quas laudantium,
-                enim omnis excepturi vero vel unde perspiciatis voluptatum voluptatibus pariatur similique quia nihil
-                inventore hic maxime asperiores commodi repudiandae?
-                Ex, ducimus maxime! Quidem quisquam voluptates sapiente mollitia ipsa voluptas vitae velit nobis quod!
-                Qui eaque, ullam eos facere deserunt quia quisquam dicta. Corporis nobis illo excepturi impedit debitis
-                libero.</p>
-            <div class="note-btns">
-                <button type="button" class="note-btn view-note">View Note</button>
-                <button type="button" class="note-btn delete-note">Delete Note</button>
-            </div>
-        </div>
-        <!-- Note two -->
-        <div class="note">
-            <h2 class="note-title">Sample Note Title</h2>
-            <p class="note-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quas laudantium,
-                enim omnis excepturi vero vel unde perspiciatis voluptatum voluptatibus pariatur similique quia nihil
-                inventore hic maxime asperiores commodi repudiandae?
-                Ex, ducimus maxime! Quidem quisquam voluptates sapiente mollitia ipsa voluptas vitae velit nobis quod!
-                Qui eaque, ullam eos facere deserunt quia quisquam dicta. Corporis nobis illo excepturi impedit debitis
-                libero.</p>
-            <div class="note-btns">
-                <button type="button" class="note-btn view-note">View Note</button>
-                <button type="button" class="note-btn delete-note">Delete Note</button>
-            </div>
-        </div>
-        <!-- Note Three -->
-        <div class="note">
-            <h2 class="note-title">Sample Note Title</h2>
-            <p class="note-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quas laudantium,
-                enim omnis excepturi vero vel unde perspiciatis voluptatum voluptatibus pariatur similique quia nihil
-                inventore hic maxime asperiores commodi repudiandae?
-                Ex, ducimus maxime! Quidem quisquam voluptates sapiente mollitia ipsa voluptas vitae velit nobis quod!
-                Qui eaque, ullam eos facere deserunt quia quisquam dicta. Corporis nobis illo excepturi impedit debitis
-                libero.</p>
-            <div class="note-btns">
-                <button type="button" class="note-btn view-note">View Note</button>
-                <button type="button" class="note-btn delete-note">Delete Note</button>
-            </div>
-        </div>
+       <!-- Note list goes here -->
     </div>
-    <div class="note-container"></div>
+    <!-- <div class="note-container"></div> -->
 </body>
 
 </html>
