Modify UI layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="modal-container">
         <div class="modal">
-            <button class="modal-btn"><i class="fa-solid fa-xmark"></i></button>
+            <button class="modal-btn" type="button"><i class="fa-solid fa-xmark"></i></button>
         <h2 class="modal-title">Title here</h2>
         <p class="modal-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere adipisci voluptas voluptates nisi iure fugiat eveniet repellendus quia tenetur fugit aperiam nostrum dicta neque vel rem nihil dignissimos, minus, enim necessitatibus!</p>
         </div>  
